[project]
name = "in-memory-db"
version = "0.1.0"
description = "Test task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.1.1,<9",
    "isort>=5.13.2,<6",
    "black>=24.3.0,<25",
    "mypy>=1.13.0,<2",
    "coverage>=7.4.3,<8",
    "six>=1.16.0,<2",
    "wemake-python-styleguide>=1.1.0,<2",
    "flake8>=7.1.1",
    "flake8-cognitive-complexity>=0.1.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
include = '\.py$'

[tool.ruff]
preview = true
fix = true
target-version = "py313"
line-length = 79
extend-exclude = [
  ".venv",
]
